--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -15,9 +15,26 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/tv_content"
+            android:id="@+id/tv_des"
+            android:textColor="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:text="@string/app_name"/>
+
+        <TextView
+            android:id="@+id/tv_type"
+            android:textColor="@color/colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_des"
+            tools:text="@string/app_name"/>
+
+        <TextView
+            android:id="@+id/tv_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/tv_des"
             tools:text="@string/app_name"/>
 
         <ImageView
