--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -3,38 +3,50 @@
                                     xmlns:tools="http://schemas.android.com/tools"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="16dp"
-                                    android:layout_marginStart="16dp"
-                                    android:layout_marginTop="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="10dp"
                                     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_des"
-            android:textColor="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
             tools:text="@string/app_name"/>
+
+        <ImageView
+            android:id="@+id/iv_type"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/tv_des"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:id="@+id/tv_type"
-            android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_des"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/iv_type"
+            android:textColor="@color/colorAccent"
             tools:text="@string/app_name"/>
 
         <TextView
             android:id="@+id/tv_author"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/tv_des"
+            android:layout_marginTop="10dp"
             tools:text="@string/app_name"/>
 
         <ImageView
